# ml-translate

./: .gitignore  .pre-commit-config.yaml  CLAUDE_ERRORS.md  OPTIMIZATION_PLAN.md  QUESTIONS.md  README.md  REPORT.md  pyproject.toml
notebooks/: translate.ipynb
src/ml_translate/: __init__.py  config.py  data.py  embedding.py  eval.py  model.py  train.py  utils.py
tests/: conftest.py  test_data.py  test_embedding.py  test_eval.py  test_model.py  test_models.py  test_train.py  test_utils.py
