[project]
name = "ml-translate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "William Woodhead", email = "6097010+nofable@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
]

[project.scripts]
ml-translate = "ml_translate:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
